# Embedded

ROS/src/project-ROS2-pkg/: cmake_orig
ROS/src/project-ROS2-pkg/src/: image_subscriber.cpp
ROS/src/usb_cam/install/: local_setup.sh  setup.sh
Vitis_and_Vivado/: u96v2_sbc_mp4d_wrapper.xsa
Vitis_and_Vivado/VitisHLS/: example_hls.cpp  example_hls_tb.cpp
Vitis_and_Vivado/VitisHLS/Greyscale/: .cproject  .project  hls.app
Vitis_and_Vivado/VitisHLS/Greyscale/.apc/: autopilot.apfmapping
Vitis_and_Vivado/VitisHLS/Greyscale/Assignment2/: Assignment2.aps  Assignment2_data.json  script.tcl
Vitis_and_Vivado/u96v2_sbc_mp4d_2020_2/: u96v2_sbc_mp4d.xpr
Vitis_and_Vivado/u96v2_sbc_mp4d_2020_2/u96v2_sbc_mp4d.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
Vitis_and_Vivado/u96v2_sbc_mp4d_2020_2/u96v2_sbc_mp4d.ip_user_files/mem_init_files/: sc_post_elab.rld  u96v2_sbc_mp4d_zynq_ultra_ps_e_0_0_sc.h
Vitis_and_Vivado/u96v2_sbc_mp4d_2020_2/u96v2_sbc_mp4d.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml
Vitis_and_Vivado/u96v2_sbc_mp4d_2020_2/u96v2_sbc_mp4d.runs/impl_1/: .vivado.begin.rst  (+36 more)
ip/IP_assignment/: component.xml
ip/IP_assignment/bd/: bd.tcl
ros_2_worspace/: last_image.csv
ros_2_worspace/install/: local_setup.sh  setup.sh
ros_2_worspace/log/: latest_build
ros_2_worspace/src/install/: local_setup.sh  setup.sh
ros_2_worspace/src/log/: latest_build
ros_2_worspace/src/project-ROS2-pkg/: CMakeLists.txt
ros_2_worspace/src/project-ROS2-pkg/src/: array_to_img.cpp  array_to_img_orig  ros2_commands
src/: system-user.dtsi
(+486 files in other folders)
